# sotto-app

./: .gitignore  README.md  biome.json  index.html  package.json  repomix-output.md  repomix.config.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/binding/function/: decrypt-data.ts  decrypt-diary.ts  decrypt-reply.ts  encrypt-data.ts  encrypt-diary.ts  encrypt-key-for-recipient.ts  generate-aes-key.ts  generate-key-pair.ts
src/binding/types/: attachment.d.ts  diary-data.d.ts  reply-data.d.ts
src/components/features/attachment/: delete-popup.tsx  focus.tsx  upload-popup.tsx
src/components/features/auth/: biometric.tsx  pin.tsx  shared.ts
src/components/ui/avatar/: item.tsx  (+2 more)
src/hooks/: use-auth.ts  use-check-initialized.ts  use-diary.ts  use-drawer.ts  use-flow.ts  use-overlay.ts  use-storage.ts
src/lib/: animation.ts  app.ts  common.ts  date.ts  http.ts  log.ts  storage.ts  weather.ts
src/lib/managers/: attachment.ts  auth.ts  diary.ts  file.ts  friend.ts  http.ts  location.ts  storage.ts  user.ts
src/routes/: index.ts
src/routes/diary/: index.tsx  page.css.ts
src/routes/home/: index.tsx  page.css.ts
src/routes/index/: index.tsx  page.css.ts
src/routes/my-profile/: index.tsx  page.css.ts
src/routes/new-diary/: index.tsx  page.css.ts
src/routes/sign-up/: index.tsx
src/styles/: color.css.ts  font.css.ts  layer.css.ts  reset.css.ts
src/types/: diary.d.ts  props.d.ts  response.d.ts
src/utils/: style.ts
(+191 files in other folders)
