[package]
name = "sotto-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sotto_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = "0.9.8"
aes-gcm = "0.10.3"
rand = "0.9.1"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-stronghold = "2.2.0"
rust-argon2 = "2.1.0"
tauri-plugin-keychain = "2.0.2"
tauri-plugin-fs = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
